--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Duotrigordle",
-  "name": "Duotrigordle",
+  "short_name": "btdm",
+  "name": "btdm",
   "icons": [
     {
       "src": "favicon.ico",
